[package]
name = "rthumbd"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
itertools.workspace = true
url.workspace = true

zbus = { version = "5.5.0" }
tokio = { version = "1.43.0", features = ["macros", "rt", "sync"] }
sd-notify = { version = "0.4.5" }

rthumb = { path = "../rthumb" }
rthumb-image = { path = "../rthumb-image", optional = true }
rthumb-video = { path = "../rthumb-video", optional = true }

[lints]
workspace = true

[features]
default = ["image"]
image = ["dep:rthumb-image"]
video = ["dep:rthumb-video"]
